--- a/inventory-service/src/main/resources/application-dev.properties
+++ b/inventory-service/src/main/resources/application-dev.properties
@@ -1,5 +1,9 @@
 spring.application.name=inventory-service
 
+#authentication
+authService.internal.url=http://localhost:8090
+authService.jwks.url=http://localhost:8090/auth/.well-known/jwks.json
+jwt.public-key.cache.seconds=300
 
 # Server Configuration
 server.port=8095
@@ -9,20 +13,26 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/b2g_library
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
-
+app.rabbitmq.exchange=b2g.topic.exchange
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# JWT Configuration
-jwt.keys.directory=./dev-keys
-jwt.issuer=b2g-auth-service
-jwt.audience=b2g-microservices
 
-app.rabbitmq.routingkey.lend.request.created=lend.request.created
+spring.rabbitmq.host= localhost
+spring.rabbitmq.port= 5672
+spring.rabbitmq.username= guest
+spring.rabbitmq.password= guest
+spring.rabbitmq.publisher-confirm-type= correlated
+spring.rabbitmq.publisher-returns= true
 
-# External Services Configuration
-catalog-service.url=http://localhost:8091
+app.rabbitmq.bindingkey.book.format.created= book.format.created
+app.rabbitmq.bindingkey.lend.request.created=lend.request.created
+app.rabbitmq.routingkey.lend.book.reserved=lend.book.reserved
 
+app.rabbitmq.routingkey.availability.available=book.availability.available
+app.rabbitmq.routingkey.availability.low=book.availability.low
+app.rabbitmq.routingkey.availability.out=book.availability.out
+app.rabbitmq.routingkey.availability.not_available=book.availability.not_available
