--- a/reader-service/src/main/resources/application-dev.properties
+++ b/reader-service/src/main/resources/application-dev.properties
@@ -1,15 +1,23 @@
 spring.application.name=reader-service
-  
-  # Server Configuration
-server.port=8098
-authService.internal.url=http://localhost:8090/internal
 
+# Server Configuration
+server.port=8098
+
+#authentication
+authService.internal.url=http://localhost:8090
+authService.jwks.url=http://localhost:8090/auth/.well-known/jwks.json
+jwt.public-key.cache.seconds=300
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/b2g_readers
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.initialization-fail-timeout=-1
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -25,26 +33,19 @@ app.rabbitmq.exchange= b2g.topic.exchange
 app.rabbitmq.service.prefix=readers
 app.rabbitmq.routing-key.user.confirmed=rk.user.confirmed
 spring.rabbitmq.publisher-confirm-type=correlated
-
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 
 app.rabbitmq.binding-key.lend.created=lend.created
 app.rabbitmq.binding-key.lend.failed=lend.failed
 app.rabbitmq.binding-key.lend.ended=lend.ended
 
-app.rabbitmq.binding-key.review.authrequested=review.authorization
+app.rabbitmq.binding-key.review.authrequested=review.authorization.requested
 app.rabbitmq.routing-key.review.authorized=review.authorized
 app.rabbitmq.routing-key.review.rejected=review.rejected
 
-
-
-  
-  # JWT Configuration
-jwt.keys.directory=./dev-keys
-
-jwt.issuer=b2g-auth-service
-jwt.audience=b2g-microservices
-
-
-
-
-
+#mock content
+minio.url=http://localhost:9000
+minio.access-key=admin
+minio.secret-key=admin123
+minio.bucket=cover-images
