--- a/review-service/src/main/resources/application-dev.properties
+++ b/review-service/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.application.name=review-service
-  
-  # Server Configuration
+
+# Server Configuration
 server.port=8097
 authService.internal.url=http://localhost:8090/internal
 
@@ -9,20 +9,17 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/b2g_reviews
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.initialization-fail-timeout=-1
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-
-
-  
-  # JWT Configuration
-jwt.keys.directory=./dev-keys
-
-jwt.issuer=b2g-auth-service
-jwt.audience=b2g-microservices
 
 
 #RabbitMq Configurations
@@ -36,6 +33,7 @@ app.rabbitmq.service.prefix=review
 app.rabbitmq.binding-key.review.authorized=review.authorized
 app.rabbitmq.binding-key.review.rejected=review.rejected
 
-app.rabbitmq.routing-key.review.authorization.requested=review.authorization.requested
+app.rabbitmq.routing-key.review.authorization.requested=review.authorization
+
 
 
