--- a/review-service/src/main/resources/application-prod.properties
+++ b/review-service/src/main/resources/application-prod.properties
@@ -1,38 +1,37 @@
+
 spring.application.name=review-service
-  
-  # Server Configuration
-server.port=8097
-authService.internal.url=http://localhost:8090/internal
+server.port=${SERVER_PORT:8097}
 
-# Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/b2g_reviews
-spring.datasource.username=user
-spring.datasource.password=password
+
+authService.internal.url=${AUTH_SERVICE_INTERNAL_URL:http://auth-service:8090/internal}
+
+
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://postgres:5432/b2g_reviews}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:user}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.initialization-fail-timeout=-1
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.validation-timeout=5000
-spring.datasource.hikari.idle-timeout=600000
-spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.initialization-fail-timeout=${SPRING_DATASOURCE_HIKARI_INIT_TIMEOUT:-1}
+spring.datasource.hikari.connection-timeout=${SPRING_DATASOURCE_HIKARI_CONN_TIMEOUT:30000}
+spring.datasource.hikari.validation-timeout=${SPRING_DATASOURCE_HIKARI_VALIDATION_TIMEOUT:5000}
+spring.datasource.hikari.idle-timeout=${SPRING_DATASOURCE_HIKARI_IDLE_TIMEOUT:600000}
+spring.datasource.hikari.max-lifetime=${SPRING_DATASOURCE_HIKARI_MAX_LIFETIME:1800000}
 
-# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 
-#RabbitMq Configurations
-spring.rabbitmq.host= localhost
-spring.rabbitmq.port= 5672
-spring.rabbitmq.username= guest
-spring.rabbitmq.password= guest
-app.rabbitmq.exchange= b2g.topic.exchange
-app.rabbitmq.service.prefix=review
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:rabbitmq}
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:guest}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:guest}
 
-app.rabbitmq.binding-key.review.authorized=review.authorized
-app.rabbitmq.binding-key.review.rejected=review.rejected
+app.rabbitmq.exchange=${APP_RABBITMQ_EXCHANGE:b2g.topic.exchange}
+app.rabbitmq.service.prefix=${APP_RABBITMQ_SERVICE_PREFIX:review}
 
-app.rabbitmq.routing-key.review.authorization.requested=review.authorization
+app.rabbitmq.binding-key.review.authorized=${APP_RABBITMQ_BINDINGKEY_REVIEW_AUTHORIZED:review.authorized}
+app.rabbitmq.binding-key.review.rejected=${APP_RABBITMQ_BINDINGKEY_REVIEW_REJECTED:review.rejected}
+app.rabbitmq.routing-key.review.authorization.requested=${APP_RABBITMQ_ROUTINGKEY_REVIEW_AUTH_REQUESTED:review.authorization.requested}
 
 
