--- a/notification-service/src/main/resources/application-dev.properties
+++ b/notification-service/src/main/resources/application-dev.properties
@@ -1,28 +1,28 @@
 spring.application.name=notification-service
-  
-  # Server Configuration
+
+# Server Configuration
 server.port=8092
-  
-  # Database Configuration
- #TODO: Update with isolated DB credentials
+
+# Database Configuration
+#TODO: Update with isolated DB credentials
 spring.datasource.url=jdbc:postgresql://localhost:5432/b2g_db
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.initialization-fail-timeout=-1
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
 authService.internal.url=http://localhost:8090/internal
-  # JPA Configuration
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-  
-  # JWT Configuration
-jwt.keys.directory=./dev-keys
-jwt.expiration.access-token=900000
-jwt.issuer=b2g-auth-service
-jwt.audience=b2g-microservices
-  
-  # Logging
+
+
+# Logging
 logging.level.com.b2g.catalogservice=DEBUG
 logging.level.org.springframework.security=DEBUG
 
@@ -47,11 +47,17 @@ app.rabbitmq.queue.user-signup=notification.user.signup
 app.rabbitmq.routing-key.signup-ticket=rk.user.registration
 app.rabbitmq.binding-key.lend.created=lend.created
 app.rabbitmq.binding-key.lend.failed=lend.failed
-app.rabbitmq.binding-key.lend.requested.paymentcheck=lend.requested.paymentcheck
-app.rabbitmq.binding-key.lend.requested.addresscheck=lend.requested.addresscheck
+app.rabbitmq.binding-key.lend.request.created=lend.request.created
+
+app.rabbitmq.binding-key.lend.ready=lend.ready
+app.rabbitmq.binding-key.lend.requested.paymentcheck=lend.paymentcheck.*
+app.rabbitmq.binding-key.lend.requested.addresscheck=lend.addresscheck.*
 app.rabbitmq.binding-key.lend.ended=lend.ended
 
 
 app.confirmation.base-url=http://localhost:8090
+
+
+
 
 
