--- a/recommendation-service/src/main/resources/application-dev.properties
+++ b/recommendation-service/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.application.name=recommendation-service
-  
-  # Server Configuration
+
+# Server Configuration
 server.port=8096
 authService.internal.url=http://localhost:8090/internal
 
@@ -10,17 +10,23 @@ spring.neo4j.authentication.password= guest12345
 
 spring.data.neo4j.database= neo4j
 spring.neo4j.pool.max-connection-pool-size=100
+spring.neo4j.pool.max-connection-lifetime=1800000
+spring.neo4j.pool.connection-acquisition-timeout=5000
 
+logging.level.org.springframework.amqp=DEBUG
+logging.level.org.springframework.amqp.rabbit=DEBUG
 spring.rabbitmq.host= localhost
 spring.rabbitmq.port= 5672
 spring.rabbitmq.username= guest
 spring.rabbitmq.password= guest
 app.rabbitmq.exchange= b2g.topic.exchange
 app.rabbitmq.service.prefix=recommendation
-
+spring.rabbitmq.dynamic=true
 #spring.rabbitmq.publisher-confirm-type= correlated
 #spring.rabbitmq.publisher-returns= true
 app.rabbitmq.bindingkey.book.creation=book.created
+
+
 
 
 
