--- a/yaak/yaak.fl_ddRFJmQ82Q.yaml
+++ b/yaak/yaak.fl_ddRFJmQ82Q.yaml
@@ -2,7 +2,7 @@ type: folder
 model: folder
 id: fl_ddRFJmQ82Q
 createdAt: 2025-10-07T14:37:21.260376
-updatedAt: 2025-12-16T22:19:04.130124
+updatedAt: 2026-01-06T20:36:49.334691100
 workspaceId: wk_94bVhSAcpy
 folderId: null
 authentication: {}
@@ -10,4 +10,4 @@ authenticationType: null
 description: ''
 headers: []
 name: Notifications
-sortPriority: 5000.0
+sortPriority: 6000.0
