--- a/yaak/yaak.rq_YtrZVhwLQZ.yaml
+++ b/yaak/yaak.rq_YtrZVhwLQZ.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_YtrZVhwLQZ
 createdAt: 2025-12-15T20:49:09.814295200
-updatedAt: 2026-01-05T14:45:00.903952100
+updatedAt: 2026-01-06T22:33:02.903507900
 workspaceId: wk_94bVhSAcpy
 folderId: fl_qYLLc5Jiv3
 authentication: {}
@@ -32,4 +32,4 @@ urlParameters:
 - enabled: true
   name: ''
   value: ''
-  id: pCvRNnknm3
+  id: TrnYB7id70
