--- a/yaak/yaak.rq_fg4gAcjDNk.yaml
+++ b/yaak/yaak.rq_fg4gAcjDNk.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_fg4gAcjDNk
 createdAt: 2025-11-18T17:46:46.335086200
-updatedAt: 2025-11-26T23:50:55.206852200
+updatedAt: 2026-01-07T13:50:20.285058500
 workspaceId: wk_94bVhSAcpy
 folderId: fl_cCZgPgtyUM
 authentication: {}
@@ -18,13 +18,13 @@ url: http://localhost:8096/recommendations/
 urlParameters:
 - enabled: true
   name: categoryIds
-  value: 02eb26e2-1b25-4cff-bdc3-c2711595d08e
+  value: fd005267-1e6d-4a68-8b78-a9a9e6ce78a2
   id: XtAMD9kYRE
 - enabled: false
   name: categoryIds
   value: 00000000-0000-0000-0000-000000000107
   id: pI5jVj7ZXZ
-- enabled: true
+- enabled: false
   name: mustHaveAll
   value: 'true'
   id: C5jefeYBuR
@@ -39,4 +39,4 @@ urlParameters:
 - enabled: true
   name: ''
   value: ''
-  id: XTHtpNsZ2s
+  id: afpKA99p5J
