minor DDD fixes

--- a/reader-service/src/main/resources/application-dev.properties
+++ b/reader-service/src/main/resources/application-dev.properties
@@ -41,7 +41,7 @@ app.rabbitmq.binding-key.lend.failed=lend.failed
 app.rabbitmq.binding-key.lend.ended=lend.ended
 
 app.rabbitmq.binding-key.review.authrequested=review.authorization.requested
-app.rabbitmq.routing-key.review.authorized=review.authorized
+app.rabbitmq.routing-key.review.authorized=review.book.possession.checked
 app.rabbitmq.routing-key.review.rejected=review.rejected
 
 #mock content
