--- a/review-service/src/main/resources/application-dev.properties
+++ b/review-service/src/main/resources/application-dev.properties
@@ -30,10 +30,12 @@ spring.rabbitmq.password= guest
 app.rabbitmq.exchange= b2g.topic.exchange
 app.rabbitmq.service.prefix=review
 
-app.rabbitmq.binding-key.review.authorized=review.authorized
-app.rabbitmq.binding-key.review.rejected=review.rejected
 
-app.rabbitmq.routing-key.review.authorization.requested=review.authorization
+app.rabbitmq.binding-key.review.authorized=${APP_RABBITMQ_BINDINGKEY_REVIEW_AUTHORIZED:review.reader.ownership.checked}
+#app.rabbitmq.binding-key.review.rejected=${APP_RABBITMQ_BINDINGKEY_REVIEW_REJECTED:review.rejected}
+app.rabbitmq.routing-key.review.authorization.requested=${APP_RABBITMQ_ROUTINGKEY_REVIEW_AUTH_REQUESTED:reader.ownership.requested}
+app.rabbitmq.routing-key.rating.updated= book.rating.updated
+
 
 
 
