--- a/catalog-service/src/main/resources/application-prod.yml
+++ b/catalog-service/src/main/resources/application-prod.yml
@@ -56,6 +56,7 @@ app:
       format:
         created: ${APP_RK_FORMAT_CREATED:book.format.created}
     bindinkey:
+      rating.updated: ${APP_RK_RATING_UPDATED:book.rating.updated}
       availability:
         all: ${APP_RK_AVAILABILITY_ALL:book.availability.*}
         available: ${APP_RK_AVAILABILITY_AVAILABLE:book.availability.available}
