--- a/notification-service/src/main/resources/application-prod.yml
+++ b/notification-service/src/main/resources/application-prod.yml
@@ -24,17 +24,18 @@ spring:
         format_sql: true
 
   mail:
-    host: ${SPRING_MAIL_HOST:mailhog}
-    port: ${SPRING_MAIL_PORT:1025}
+    host: ${SPRING_MAIL_HOST:smtp.gmail.com}
+    port: ${SPRING_MAIL_PORT:587}
     username: ${SPRING_MAIL_USERNAME:}
     password: ${SPRING_MAIL_PASSWORD:}
     properties:
       mail:
         smtp:
-          auth: false
+          auth: ${SPRING_MAIL_SMTP_AUTH:true}
           starttls:
-            enable: false
-        debug: true
+            enable: ${SPRING_MAIL_STARTTLS_ENABLE:true}
+            required: ${SPRING_MAIL_STARTTLS_REQUIRED:true}
+    default-encoding: ${SPRING_MAIL_DEFAULT_ENCODING:UTF-8}
 
   rabbitmq:
     host: ${SPRING_RABBITMQ_HOST:rabbitmq}
