--- a/reader-service/src/main/resources/application-dev.properties
+++ b/reader-service/src/main/resources/application-dev.properties
@@ -40,9 +40,9 @@ app.rabbitmq.binding-key.lend.created=lend.created
 app.rabbitmq.binding-key.lend.failed=lend.failed
 app.rabbitmq.binding-key.lend.ended=lend.ended
 
-app.rabbitmq.binding-key.review.authrequested=review.authorization.requested
-app.rabbitmq.routing-key.review.authorized=review.book.possession.checked
-app.rabbitmq.routing-key.review.rejected=review.rejected
+app.rabbitmq.binding-key.review.authrequested=reader.ownership.requested
+app.rabbitmq.routing-key.review.authorized=review.reader.ownership.checked
+#app.rabbitmq.routing-key.review.rejected=review.rejected non rifiuta più lui
 
 #mock content
 minio.url=http://localhost:9000
