--- a/review-service/src/main/resources/application-prod.properties
+++ b/review-service/src/main/resources/application-prod.properties
@@ -30,8 +30,8 @@ spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:guest}
 app.rabbitmq.exchange=${APP_RABBITMQ_EXCHANGE:b2g.topic.exchange}
 app.rabbitmq.service.prefix=${APP_RABBITMQ_SERVICE_PREFIX:review}
 
-app.rabbitmq.binding-key.review.authorized=${APP_RABBITMQ_BINDINGKEY_REVIEW_AUTHORIZED:review.book.possession.checked}
-app.rabbitmq.binding-key.review.rejected=${APP_RABBITMQ_BINDINGKEY_REVIEW_REJECTED:review.rejected}
-app.rabbitmq.routing-key.review.authorization.requested=${APP_RABBITMQ_ROUTINGKEY_REVIEW_AUTH_REQUESTED:review.authorization.requested}
-
+app.rabbitmq.binding-key.review.authorized=${APP_RABBITMQ_BINDINGKEY_REVIEW_AUTHORIZED:review.reader.ownership.checked}
+#app.rabbitmq.binding-key.review.rejected=${APP_RABBITMQ_BINDINGKEY_REVIEW_REJECTED:review.rejected}
+app.rabbitmq.routing-key.review.authorization.requested=${APP_RABBITMQ_ROUTINGKEY_REVIEW_AUTH_REQUESTED:reader.ownership.requested}
+app.rabbitmq.routing-key.rating.updated= book.rating.updated
 
