--- a/k8s/secret/postgres-secret.yml
+++ b/k8s/secret/postgres-secret.yml
@@ -1,10 +1,21 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: postgres-secret
+  name: db-secrets
   namespace: book2go
 type: Opaque
 data:
-  POSTGRES_DB: YjJnX2Ri # "b2g_db" in base64
-  POSTGRES_USER: dXNlcg==       # "user" in base64
-  POSTGRES_PASSWORD: cGFzc3dvcmQ= # "password" in base64
+  POSTGRES_USER: dXNlcg==          # "user"
+  POSTGRES_PASSWORD: cGFzc3dvcmQ=  # "password"
+
+  B2G_DB: YjJnX2Ri                 # "b2g_db"
+  B2G_LIBRARY_DB: YjJnX2xpYnJhcnk= # "b2g_library"
+  B2G_RENTAL_DB: YjJnX3JlbnRhbA==  # "b2g_rental"
+  B2G_READERS_DB: YjJnX3JlYWRlcg== # "b2g_readers"
+  B2G_REVIEWS_DB: YjJnX3Jldmlld3M= # "b2g_reviews"
+
+  NEO4J_USER: bmVvNGo=             # "neo4j"
+  NEO4J_PASSWORD: Z3Vlc3QxMjM0NQ== # "guest12345"
+
+  MINIO_ROOT_USER: YWRtaW4=        # "admin"
+  MINIO_ROOT_PASSWORD: YWRtaW4xMjM= # "admin123"
