--- a/reader-service/Dockerfile
+++ b/reader-service/Dockerfile
@@ -7,7 +7,7 @@ FROM maven:3.9.6-eclipse-temurin-21 AS reader-build
 WORKDIR /app/reader-service
 COPY reader-service ./
 COPY --from=shared-build /root/.m2 /root/.m2
-RUN ./mvnw clean package -DskipTests
+RUN ./mvnw clean package -DskipTests -X
 
 FROM eclipse-temurin:21-jre-jammy
 WORKDIR /app
