--- a/yaak/yaak.rq_YtrZVhwLQZ.yaml
+++ b/yaak/yaak.rq_YtrZVhwLQZ.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_YtrZVhwLQZ
 createdAt: 2025-12-15T20:49:09.814295200
-updatedAt: 2026-01-06T22:33:02.903507900
+updatedAt: 2026-01-11T14:09:03.890934400
 workspaceId: wk_94bVhSAcpy
 folderId: fl_qYLLc5Jiv3
 authentication: {}
@@ -27,9 +27,9 @@ url: http://localhost:8099/lendable-formats
 urlParameters:
 - enabled: true
   name: bookId
-  value: 95db9fb3-7985-4269-b569-026f5caaa862
+  value: 19a58137-ef5e-4d40-b797-862c32252829
   id: t7GDj4A2aZ
 - enabled: true
   name: ''
   value: ''
-  id: TrnYB7id70
+  id: bK7rNNaqeb
